--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -86,30 +86,30 @@
     border-radius: 20px;
     margin: 12px 0px 12px 0px;
     position: relative;
-    padding: 1.4rem;
+    padding: 24px;
     cursor: pointer;
     box-shadow:0px 5px 10px $color-light-gray;
     transition: transform 500ms, background-color 400ms;
-        @include breakpoints_desktop {
-            width: 28%;
-            margin: 30px;
-            padding: 1.8rem;
-        }
-        @include breakpoints_tablette {
-            width: 35%;
-            margin: 20px;
-        }
+    @include breakpoints_tablette {
+      width: 35%;
+      margin: 20px;
+    }
+    @include breakpoints_desktop {
+        width: 28%;
+        margin: 30px;
+        padding: 28px;
+    }
     & span {
-        width: 1.4rem;
-        height: 1.4rem;
-        font-size: 0.7rem;
+        width: 25px;
+        height: 25px;
+        font-size: 12px;
         text-align: center;
         color: $color-white;
         background-color: $color-primaire;
-        padding: 0.3rem ;
+        padding: 6px;
         border-radius: 50%;
         position: absolute;
-        left: -0.7rem; 
+        left: -12px; 
     }
     & i {
         color: $color-icons-fonctionnement;
@@ -136,10 +136,10 @@
 /*Cartes Restaurants*/
 .restaurants {
 	background: $color-background;
-	padding: 3rem 0rem 2rem 0rem;
+	padding: 50px 0px 40px 0px;
   margin-top: 50px;
   @include breakpoints_tablette {
-    padding: 3rem 0rem 2.5rem 0rem;
+    padding: 50px 0px 45px 0px;
   }
 	&__cartes {
 		margin-top: 20px;
@@ -193,15 +193,15 @@
       margin-top: 10px;
 			& p {
 				margin-top: 5px;
-				font-size: 0.9rem;
+				font-size: 15px;
 				font-weight: 300;
         @include breakpoints_tablette {
-          font-size: 1rem;
+          font-size: 16px;
         }
 			}
       &__coeur {
         position: absolute;
-        font-size: 1.4rem;
+        font-size: 24px;
         right: 20px;
         top: 170px;
         transition: color 600ms linear;
@@ -210,12 +210,12 @@
           @include coeur;
         }
         @include breakpoints_tablette {
-          top: 175px;
-          font-size: 1.5rem;
+          top: 180px;
+          font-size: 26px;
         }
         @include breakpoints_desktop {
-          top: 235px;
-          font-size: 1.5rem;
+          top: 240px;
+          font-size: 26px;
         }
       }
 			& small {
