--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -1,7 +1,7 @@
 .formulaire {
     @include flexbox;
     background: $background-form;
-    height: 3rem;
+    height: 50px;
     .fa-map-marker-alt {
         font-size: 14px;
         margin-left: 50px;
@@ -9,7 +9,7 @@
     input:disabled {
         background: transparent;
         border: none;
-        height: 3rem;
+        height: 50px;
         cursor: text;
         margin-left: 20px;
         &::placeholder {
