--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -129,17 +129,17 @@
 
 /*Apparition Progressive Button Commande*/
 @keyframes btn {
-    from {opacity: 0%; width: 0%;}
-    to {opacity: 100%; width: 100%;}
+    0% {opacity: 0; transform: translateY(15%);}
+    100% {opacity: 1; transform: translateY(0%);}
 }
 
 @-webkit-keyframes btn {
-    from {opacity: 0%; width: 0%;}
-    to {opacity: 100%; width: 100%;}
+    0% {opacity: 0; transform: translateY(15%);}
+    100% {opacity: 1; transform: translateY(0%);}
 }
 
 @-moz-keyframes btn {
-    from {opacity: 0%; width: 0%;}
-    to {opacity: 100%; width: 100%;}
+    0% {opacity: 0; transform: translateY(15%);}
+    100% {opacity: 1; transform: translateY(0%);}
 }
 /*Fin d'Apparition Progressive Button Commande*/
