--- a/style.css
+++ b/style.css
@@ -345,19 +345,19 @@
   height: 50px;
 }
 .formulaire .fa-map-marker-alt {
-  font-size: 14px;
-  margin-left: 50px;
+  font-size: 16px;
+  padding-bottom: 5px;
 }
 .formulaire input:disabled {
   background: transparent;
   border: none;
   height: 50px;
   cursor: text;
-  margin-left: 20px;
+  margin-left: 15px;
 }
 .formulaire input:disabled::placeholder {
   color: black;
-  font-size: 14px;
+  font-size: 15px;
 }
 @media screen and (min-width: 992px) {
   .formulaire input:disabled::placeholder {
@@ -378,9 +378,9 @@
   bottom: 0;
   width: 100%;
   height: 100%;
-  -webkit-animation: chargement 7s forwards;
-  -moz-animation: chargement 7s forwards;
-  animation: chargement 5s forwards;
+  -webkit-animation: chargement 3s forwards;
+  -moz-animation: chargement 3s forwards;
+  animation: chargement 3s forwards;
 }
 .chargement .rotation {
   width: 170px;
@@ -390,27 +390,27 @@
   position: absolute;
 }
 .chargement .logo_chargement {
-  -webkit-animation: logo_chargement 3s forwards;
-  -moz-animation: logo_chargement 3s forwards;
-  animation: logo_chargement 3s forwards;
+  -webkit-animation: logo_chargement 2s forwards;
+  -moz-animation: logo_chargement 2s forwards;
+  animation: logo_chargement 2s forwards;
 }
 .chargement .color_primaire {
   border-top: 6px solid #9356DC;
-  -webkit-animation: rotation_1 3s ease-in-out forwards;
-  -moz-animation: rotation_1 3s ease-in-out forwards;
-  animation: rotation_1 3s ease-in-out forwards;
+  -webkit-animation: rotation_1 2s ease-in-out forwards;
+  -moz-animation: rotation_1 2s ease-in-out forwards;
+  animation: rotation_1 2s ease-in-out forwards;
 }
 .chargement .color_secondaire {
   border-bottom: 6px solid #FF79DA;
-  -webkit-animation: rotation_2 3s ease-out forwards;
-  -moz-animation: rotation_2 3s ease-out forwards;
-  animation: rotation_2 3s ease-out forwards;
+  -webkit-animation: rotation_2 2s ease-out forwards;
+  -moz-animation: rotation_2 2s ease-out forwards;
+  animation: rotation_2 2s ease-out forwards;
 }
 .chargement .color_tertiaire {
   border-left: 6px solid #99E2D0;
-  -webkit-animation: rotation_3 3s ease-in forwards;
-  -moz-animation: rotation_3 3s ease-in forwards;
-  animation: rotation_3 3s ease-in forwards;
+  -webkit-animation: rotation_3 2s ease-in forwards;
+  -moz-animation: rotation_3 2s ease-in forwards;
+  animation: rotation_3 2s ease-in forwards;
 }
 
 /*Fin de spinner*/
