--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -41,7 +41,8 @@
 		  -moz-animation: rotation_3 2s ease-in forwards;
 		  animation: rotation_3 2s ease-in forwards;
 	}
-}/*Fin de spinner*/
+}
+/*Fin de spinner*/
 
 /*Présentation*/
 .présentation {
@@ -60,7 +61,8 @@
             font-size: 18px;
         }
     }
-}/*Fin de Présentation*/
+}
+/*Fin de Présentation*/
 
 /*Fonctionnement*/
 .fonctionnement {
@@ -131,7 +133,8 @@
         }
     }
   }
-}/*Fin de Fonctionnement*/
+}
+/*Fin de Fonctionnement*/
 
 /*Cartes Restaurants*/
 .restaurants {
@@ -236,4 +239,5 @@
 			      }
 		    }
 	  }
-}/*Fin de Cartes Restaurants*/
+}
+/*Fin de Cartes Restaurants*/
